Добавлена сортировка в запросы в elastic